--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -9,4 +9,8 @@
       <Folder Include="wwwroot\js" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.11" />
+    </ItemGroup>
+
 </Project>
