Configuration(appsetings) GetValue, GetSection

--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "myfield": {
+    "test": "morear",
+    "booleanField" : true
+  },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=barrel.itcollege.ee;User Id=student;Password=Student.Pass.1;Database=student_ahabdu_bookstore;MultipleActiveResultSets=true;"
+  },
   "AllowedHosts": "*"
 }
