Algorithm to replace placeholder( {{UserName}} ) with text you want

--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -13,5 +13,16 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Server=barrel.itcollege.ee;User Id=student;Password=Student.Pass.1;Database=student_ahabdu_bookstore;MultipleActiveResultSets=true;"
   },
+  "SMTPConfig": {
+    "SenderAddress" : "no-reply@bookstoreapp.com",
+    "SenderDisplayName" : "Book store team",
+    "UserName": "9a403a46310b41",
+    "Password": "16e28e18036665",
+    "host": "smtp.mailtrap.io",
+    "Port": 2525,
+    "EnableSSL": true,
+    "UseDefaultCredentials": false,
+    "IsBodyHTML": true
+  },
   "AllowedHosts": "*"
 }
