--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -6,6 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Application": {
+    "AppDomain": "https://localhost:5001/",
+    "EmailConfirmation": "confirm-email?uid={0}&token={1}"
+  },
   "myfield": {
     "test": "morear",
     "booleanField" : true
