--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -8,7 +8,8 @@
   },
   "Application": {
     "AppDomain": "https://localhost:5001/",
-    "EmailConfirmation": "confirm-email?uid={0}&token={1}"
+    "EmailConfirmation": "confirm-email?uid={0}&token={1}",
+    "ForgotPassword": "reset-password?uid={0}&token={1}"
   },
   "myfield": {
     "test": "morear",
