--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -5,6 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Areas\Admin\Controllers" />
+      <Folder Include="Areas\Admin\Data" />
+      <Folder Include="Areas\Admin\Models" />
       <Folder Include="wwwroot\books\cover" />
       <Folder Include="wwwroot\books\gallery" />
       <Folder Include="wwwroot\books\pdf" />
